[package]
name = "bg"
version = "0.1.0"
edition = "2021"

# [profile.dev.package.'*']
# opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = { git = "https://github.com/not-fl3/macroquad.git", features = ["audio"] }
lazy_static = "1.4"
notify = "6.1.1"
# quad-storage = { path = "../quad-storage" }
log = {version = "0.4.20", features = ["std"] }
itertools = "0.12.1"
[target.'cfg(target_os = "ios")'.dependencies]
oslog = "0.2.0"
objc = "0.2.7"
